Feat: 현재 ROUND 방 매핑 조회 API 추가
